# ukelx

./: .gitignore  README.md  pyproject.toml
ukelx/: config.py  jinja.py  main.py  models.py  preprocessing.py
ukelx/static/: cached_constituencies.json
ukelx/templates/: index.html
ukelx/templates/components/: constituencies_list.html  constituencies_summary.html  filter_constituencies.html  party_result_badge.html  stacked_bar_chart.html
