[tool.poetry]
name = "ukelx"
version = "0.1.0"
description = "UK election results data processing"
authors = ["Louis Maddox <louismmx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"

pydantic = "^2.7.4"
starlette = "^0.37.2"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
pydantic-settings = "^2.3.4"
polars = "^1.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"serve" = "ukelx.main:serve"
